@@ -1,3 +1,10 @@
+2011-08-02  Andrew Cohen  <cohen@andy.bu.edu>
+
+	* nnir.el (nnir-search-thread): Position point on referring article
+	line.
+
+	* nnimap.el (nnimap-request-thread): Whitespace fix.
+
 2011-08-02  Steve Purcell  <steve@sanityinc.com>  (tiny change)
 
 	* nnimap.el (nnimap-get-groups): Decode "&" correctly.
